docs: notes from review